ScrollToTop component working, bug squashing ahead

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 .App {
   text-align: center;
   height:100%;
-  /*color:#cccccc;*/
   color:black;
   font-size:16px;
 }
@@ -21,12 +20,13 @@
 }
 
 @media screen and (max-width: 700px){
-  #root, html, body{
+  #root, html{
     margin:0;
     width:100vw;
-    padding: 0;
+    height:100vh;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
+    padding: 0;
   }
 
   .app-content{
