--- a/src/hocs/PresidentLink.css
+++ b/src/hocs/PresidentLink.css
@@ -1,5 +1,5 @@
 .president-link{
-    background: linear-gradient(top, #1379ff, #ff505c);
+    background: linear-gradient(to top, #1379ff, #ff505c);
     color:white;
     text-decoration: none;
     font-size: 18px;
